# mips-r10k

./: .gitignore  Makefile.am  README  TAGS  configure.ac
src/: Makefile  Makefile.am  Makefile.in  TAGS  active_list.c  active_list.h  backend.c  backend.h  branch_stack.c  branch_stack.h  committer.c  committer.h  constants.h  decode_buffer.c  decode_buffer.h  error.c  error.h  fetch_stage.c  fetch_stage.h  frontend.c  frontend.h  functional.c  functional.h  instr.c  instr.h  instr_queue.c  instr_queue.h  mipsr10k  mipsr10k.c  misc.c  misc.h  reg_map.c  reg_map.h
src/test/: b1  branches  ls1  ls2  ls4  s1  s5  t5
test/: b2  b3  b4  b5  b6  dummy.instr  dummy2.instr  fp_ops  function_call.txt  ls3  s1  s2  s3  s4  t1  t2  t3  t4  unrelated_instr
